fixed z-index

--- a/public/style/app.css
+++ b/public/style/app.css
@@ -149,7 +149,7 @@
 	padding: 4px;
 	background-color: white;
 	display: none;
-	z-index: 5000;
+	z-index: 10000;
 	-webkit-box-shadow: 0px 0px 20px -5px rgba(0, 0, 0, 0.75);
 	-moz-box-shadow: 0px 0px 20px -5px rgba(0, 0, 0, 0.75);
 	box-shadow: 0px 0px 20px -5px rgba(0, 0, 0, 0.75);
